# pod

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-binary  Dockerfile-musl  LICENSE.txt  README.md  Settings.toml  build-pod.sh  build.rs  docker-compose.yml  start-dgraph.sh
.cargo/: config.toml
benches/: rusqlite_reconnection.rs
docs/: ACTION_API_WHATSAPP.md  DataCollectives.md  DatabaseLayout.md  HTTP_API.md  Integrators.md  Plugins.md  RunningServices.md  Schema.md  Security.md  SharedServer.md  Synchronization.md  WIP_QueryRedesign.md
examples/: generate_self-signed_certificate.sh  run_development.sh  run_development_https.sh  using-prebuilt-docker.yml
examples/whatsapp_data/: add_whatsapp_example_data.sh  check_whatsapp_example_data.sh  http_add_whatsapp_example_data.sh  http_whatsapp_example_data.json  whatsapp_example_data.json
res/: V1__initial_specialization.sql  V1__initial_with_refs.sql  autogenerated_database_schema.json  example_data.sql  whatsapp_auth.py
res/migrations/: V1__initial.sql  V2__edges_order_label.sql  V2__item_StartPlugin.sql  V3__add_date_server_modified.sql  V3__item_File.sql  V4__base_item_properties.sql
res/templates/: whatsapp.html
src/: action_api.rs  api.rs  api_model.rs  command_line_interface.rs  configuration.rs  constants.rs  data_model.rs  database_api.rs  database_ddl.rs  database_init.rs  database_migrate_refinery.rs  database_migrate_schema.rs  database_model.rs  database_schema_generator.rs  database_utils.rs  dgraph_database.rs  email.rs  error.rs  file_api.rs  global_static.rs  internal_api.rs  lib.rs  main.rs  plugin_auth_crypto.rs  plugin_run.rs  schema.rs  services_api.rs  sql_converters.rs  sync_state.rs  triggers.rs  warp_api.rs  warp_endpoints.rs
src/data_model/: schema_definition.rs
src/importers/: mod.rs  note_importer.rs
tests/: client.rs  common.rs  query.rs  test_1_client.rs  test_2_api.rs  test_3_audit.rs  test_4_import.rs  test_api.rs  test_bulk_action.rs  test_curl.sh  test_get_item_with_edges.rs  test_internal_api.rs  test_search.rs
tools/: add-notes.sh  mutation.json  start-dgraph.sh  start-pod.sh  test_curl.sh
