[package]
name = "pod"
version = "0.2.1"
authors = [
  "Bijun Li <bijun.li@polis.global>",
  "Ruben Seggers <ruben.seggers@polis.global>",
  "Vasili Novikov (copyright transferred to Polis) <n1dr+cm3513git@ya.ru>",
  "Youp Mickers (copyright transferred to Polis) <polisyoup@gmail.com>",
]
edition = "2018"
publish = false # Prevent accidental publishing


[dependencies]
bytes = "0.6.0"
chacha20poly1305 = "0.7.1"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8.1"
hex = "0.4.2"
lazy_static = "1.4.0"
libc = "0.2.80"
log = "0.4.11"
rand = "0.7.3"
refinery = { version = "0.4.0", features = ["rusqlite"] }
regex = "1.4.2"
rusqlite = { version = "0.24.1", features = ["sqlcipher"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
sha2 = "0.9.1"
structopt = { version = "0.3.20", features = ["color"] }
tokio = { version = "0.3.3", features = ["macros", "rt", "rt-multi-thread"] }
warp = { version = "0.2.5", default-features = false, features = ["tls"] }

[dev-dependencies]
criterion = "0.3.3"


[profile.release]
lto = true

[[bench]]
name = "rusqlite_reconnection"
harness = false

