[package]
name = "pod"
version = "0.3.0"
authors = [
  "Bijun Li <bijun.li@polis.global>",
  "Ruben Seggers <ruben.seggers@polis.global>",
  "Vasili Novikov (copyright transferred to Polis) <n1dr+cm3513git@ya.ru>",
  "Youp Mickers (copyright transferred to Polis) <polisyoup@gmail.com>",
]
edition = "2018"
publish = false # Prevent accidental publishing


[dependencies]
bytes = "1.0.1"
chacha20poly1305 = "0.7.1"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8.3"
hex = "0.4.2"
lazy_static = "1.4.0"
libc = "0.2.87"
log = "0.4.14"
rand = { version = "0.8.3", features = ["getrandom"] }
refinery = { version = "0.5.0", features = ["rusqlite"] }
regex = "1.4.3"
rusqlite = { version = "0.24.2", features = ["sqlcipher"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
sha2 = "0.9.3"
structopt = { version = "0.3.21", features = ["color"] }
tokio = { version = "1.2.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
warp = { version = "0.3.0", default-features = false, features = ["tls"] }

[dev-dependencies]
criterion = "0.3.4"


[profile.release]
lto = true

[[bench]]
name = "rusqlite_reconnection"
harness = false

