[package]
name = "pod"
version = "0.4.3"
authors = [
  "Bijun Li <bijun.li@polis.global>",
  "Ruben Seggers <ruben.seggers@polis.global>",
  "Vasili Novikov (copyright transferred to Polis) <n1dr+cm3513git@ya.ru>",
  "Youp Mickers (copyright transferred to Polis) <polisyoup@gmail.com>",
]
edition = "2018"
publish = false # Prevent accidental publishing


[dependencies]
bytes = "1.0.1"
chacha20poly1305 = "0.8.1"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
field_count = "0.1.1"
field_count_derive = "0.1.1"
hex = "0.4.3"
lazy_static = "1.4.0"
libc = "0.2.98"
log = "0.4.14"
rand = { version = "0.8.4", features = ["getrandom"] }
refinery = { version = "0.6.0", features = ["rusqlite"] }
regex = "1.5.4"
rusqlite = { version = "0.25.3", features = ["sqlcipher"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_path_to_error = "0.1.4"
sha2 = "0.9.5"
structopt = { version = "0.3.22", features = ["color", "suggestions"] }
tokio = { version = "1.9.0", features = ["full"] }
warp = { version = "0.3.1", default-features = false, features = ["tls"] }
zeroize = "1.3.0"

[dev-dependencies]
criterion = "0.3.5"


[profile.release]
lto = true

[[bench]]
name = "rusqlite_reconnection"
harness = false

